--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "framer-motion": "^11.11.11",
     "next": "15.0.2",
     "react": "^18.3.1",
