--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.3"
   }
 }
