--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "aos": "^2.3.4",
     "framer-motion": "^11.11.11",
     "moment": "^2.30.1",
+    "mongoose": "^8.10.2",
     "next": "15.0.2",
     "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.3",
