--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "aos": "^2.3.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "framer-motion": "^11.11.11",
     "moment": "^2.30.1",
     "mongoose": "^8.10.2",
