--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.10.2",
     "next": "15.0.2",
+    "next-auth": "^4.24.11",
     "nextjs-toploader": "^3.7.15",
     "react": "^18.3.1",
     "react-countdown": "^2.3.6",
